--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -1,4 +1,4 @@
-name: Label PRs
+name: Update Package semantic version
 on:
   push:
     branches: ['develop']
@@ -9,7 +9,7 @@ jobs:
       pull-requests: write
     steps:
       - name: Checkout
-        uses: actions/checkout@develop
+        uses: actions/checkout@master
         
       - name: 'change version'
         uses: actions/github-script@v6
