--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -1,7 +1,7 @@
 name: Update Package semantic version
 on:
   push:
-    branches: ["develop"]
+    branches: ["main"]
 jobs:
   build:
     runs-on: ubuntu-latest
