--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -21,7 +21,8 @@ jobs:
               breaking_change: "major",
               breaking: "major"
             };
-            const version = semverMap[context.payload.pull_request.title.split("(")[0]];
+            console.log(context.payload);
+            const version = semverMap[context.payload.commit.title.split("(")[0]];
             if (version) {
               const child = exec("npm version " + version, (error, stdout, stderr) => {
                 if(error) core.setFailed(error);
