--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -21,8 +21,7 @@ jobs:
               breaking_change: "major",
               breaking: "major"
             };
-            console.log(context.payload);
-            const version = semverMap[context.head_commit.message.split("(")[0]];
+            const version = semverMap[context.payload.head_commit.message.split("(")[0]];
             if (version) {
               const child = exec("npm version " + version, (error, stdout, stderr) => {
                 if(error) core.setFailed(error);
