fix(*): semver action

--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
+            const { exec } = require('node:child_process');
             const semverMap = {
               feat: "minor",
               fix: "patch",
