--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -23,13 +23,14 @@ jobs:
 
             const version = semverMap[context.payload.head_commit.message.split("(")[0]];
 
-            if (version) {
-              const child = exec.exec("npm version " + version, (error, stdout, stderr) => {
-                if(error) core.setFailed(error);
-                if(stderr) console.log(stderr);
-                console.info(stdout);
-              });
-            } else {
-              console.log("To update package version use one of the following in your PR title:");
-              console.table(semverMap);
+            async function update() {
+              if (version) {
+                const child = await exec.exec("npm version " + version);
+                console.log(child);
+              } else {
+                console.log("To update package version use one of the following in your PR title:");
+                console.table(semverMap);
+              }
             }
+
+            update();
