--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -21,6 +21,7 @@ jobs:
               breaking: "major"
             };
 
+            console.log(context.payload);
             const version = semverMap[context.payload.head_commit.message.split("(")[0]];
 
             async function update() {
