--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -2,8 +2,7 @@ name: Update Package semantic version
 on:
   push:
     branches: ["main"]
-permissions:
-  actions: write
+permissions: write-all
 jobs:
   build:
     runs-on: ubuntu-latest
