--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -40,5 +40,7 @@ jobs:
 
             update();
       - name: Push
-        run: |
-          git push
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
