fix(*): semver action

--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
+            console.log(github.ref);
             const semverMap = {
               feat: "minor",
               fix: "patch",
