fix(*): semver action

--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -14,9 +14,12 @@ jobs:
           
       - name: Update
         uses: actions/github-script@v6
+        env:
+          GITHUB_TOKEN: ${{github.token}}
         with:
           script: |
-            console.log(github.ref);
+            const { GITHUB_TOKEN } = process.env;
+            console.log("token:", GITHUB_TOKEN);
             const semverMap = {
               feat: "minor",
               fix: "patch",
@@ -40,8 +43,11 @@ jobs:
             }
 
             update();
+      - name: check
+        run: |
+          git status
       - name: Push
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ github.token }}
           branch: ${{ github.ref }}
